# dev_shop

./: .gitignore  README.md  docker-compose.dev.yml  example.env  main.py  pyproject.toml
_project/: celery.py  urls.py
_project/settings/: base.py
apps/base/: apps.py
apps/base/models/: __init__.py  seo_model.py
docker/dev/: Dockerfile.dev
